[package]
name = "ipfs_ds_rocksdb"
version = "0.0.1"
description = "ipfs_ds_rocksdb"
authors = ["cc"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[dependencies]
libipld = "0.14"
anyhow = "1.0"
itertools = "0.10.5"
fnv = "1.0.7"
tracing = "0.1.29"
parking_lot = "0.11.2"
derive_more = "0.99"

# OpenBSD and MSVC are unteested and shouldn't enable jemalloc:
# https://github.com/tikv/jemallocator/blob/52de4257fab3e770f73d5174c12a095b49572fba/jemalloc-sys/build.rs#L26-L27
[target.'cfg(any(target_os = "openbsd", target_env = "msvc"))'.dependencies.rocksdb]
default-features = false
features = ["snappy"]
version = "0.19.0"

[target.'cfg(not(any(target_os = "openbsd", target_env = "msvc")))'.dependencies.rocksdb]
default-features = false
features = ["snappy", "jemalloc"]
version = "0.19.0"