[package]
name = "sk_core"
version = "0.0.1"
description = "sk chain core"
authors = ["cc"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[dependencies]
num = "0.4"
num-traits = "0.2"
num-bigint = "0.4"
sk_common = { version = "0.0.1", path = "../sk_common" }
sk_genesis = { version = "0.0.1", path = "../sk_genesis" }