[package]
name = "sk_trie"
version = "0.0.1"
license = "Apache-2.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
hash-db = { version = "0.15.2", default-features = false }
memory-db = { version = "0.30.0", default-features = false }
trie-db = { version = "0.24.0", default-features = false }
trie-root = { version = "0.17.0", default-features = false }
sp-trie = "7.0.0" 

[dev-dependencies]
array-bytes = "4.1"
criterion = "0.4.0"
trie-bench = "0.32.0"
trie-standardmap = "0.15.2"

# [features]
# memory-tracker = []
